<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="on_boarding_autofill_content">Let Proton Pass fill in login details for you. No typing or copy-paste required.</string>
    <string name="on_boarding_autofill_title">Log in to apps instantly</string>
    <string name="on_boarding_autofill_button">Autofill with Proton Pass</string>
    <string name="on_boarding_fingerprint_content">Set Proton Pass to unlock with your fingerprint so only you have access.</string>
    <string name="on_boarding_fingerprint_title">Protect your most sensitive data</string>
    <string name="on_boarding_fingerprint_button">Enable fingerprint unlock</string>
    <string name="on_boarding_last_page_content">Stop sharing your real email address. Instead, hide it with email aliases—a Proton Pass exclusive.</string>
    <string name="on_boarding_last_page_title">Control what lands in your inbox</string>
    <string name="on_boarding_last_page_button">Start using Proton Pass</string>
    <string name="on_boarding_skip">Not now</string>
    <string name="on_boarding_tutorial">Watch a short video on how to use Proton Pass</string>
    <string name="on_boarding_pending_invite_content">For security reasons, your access needs to be confirmed.</string>
    <string name="on_boarding_pending_invite_title">Pending access to the shared data</string>
    <string name="on_boarding_pending_invite_button">Learn more about Proton Pass</string>

    <string name="error_biometry_failed_to_start">Could not start the biometric authentication</string>
    <string name="error_biometry_failed_to_authenticate">Failed to authenticate</string>
    <string name="settings_fingerprint_lock_enabled">Fingerprint unlock enabled</string>
    <string name="error_performing_operation">Error performing operation</string>

</resources>
